--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 * {
     margin: 0;
@@ -78,7 +77,7 @@ body {
     border: 1px solid #3897f0;
     border-radius: 4px;
     text-align: center;
-    padding: 5px;
+    padding: 5px ;
 }
 
 .wrapper .header .top .btn {
@@ -87,7 +86,7 @@ body {
     border: 1px solid #3897f0;
     border-radius: 4px;
     text-align: center;
-    padding: 5px;
+    padding: 5px 110px;
 }
 
 .wrapper .header .form .btn a {
